--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section class="properties">
         <h2>Featured Properties</h2>
         <div class="property-card">
-            <img src="./images/img1.jpg" alt="Property 1">
+            <img src="./img1.jpg" alt="Property 1">
             <h3>Beautiful Family Home</h3>
             <p>3 bedrooms | 2 bathrooms | 2,000 sqft</p>
             <span class="price">₹ 50,00,000</span>
@@ -49,7 +49,7 @@
     <section class="properties">
         <h2>Featured Properties</h2>
         <div class="property-card">
-            <img src="./images/img2.webp" alt="Property 1">
+            <img src="./img2.webp" alt="Property 1">
             <h3>Beautiful Family Home</h3>
             <p>3 bedrooms | 2 bathrooms | 2,000 sqft</p>
             <span class="price">₹ 80,00,000</span>
@@ -59,7 +59,7 @@
     <section class="properties">
         <h2>Featured Properties</h2>
         <div class="property-card">
-            <img src="./images/img3.avif" alt="Property 1">
+            <img src="./img3.avif" alt="Property 1">
             <h3>Beautiful Family Home</h3>
             <p>4 bedrooms | 2 bathrooms | 2,000 sqft</p>
             <span class="price">₹ 60,00,000</span>
